# hashira-gh-actions

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: dev.python-lib.workflow.yaml  dev.python.workflow.yaml  image.build-and-publish.yaml  main.python-lib.workflow.yaml  python.build-artefact.yaml  python.service.unit-tests.yaml  python.workflow.dev.yaml  python.workflow.main.yaml  semantic-release.yaml
.github/workflows/python/: unit-tests.yaml
