[tool.poetry]
name = "hashira-gh-actions"
version = "0.1.0"
description = "A helpful collection of reusable actions"
authors = ["Justin Aluko <jjaa22@pm.me>"]
license = "GNU GPLv3"

[tool.poetry.dependencies]
python = "^3.9"

[tool.poetry.dev-dependencies]
pre-commit = "^2.20.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
